# oracle

./: .gitignore  .gitleaks.toml  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SKILL.md  go.mod  go.sum  index.html  install.sh
.github/workflows/: ci.yml  release.yml
cmd/oracle/: chunkdump.go  main.go  main_test.go
cpp/oraclemlx/: CMakeLists.txt  oraclemlx.cpp  oraclemlx.h
docs/: architecture.tex  ask_local.md  facts.md  facts.tex  history.md  mlx_perf_notes.md  publish_runbook.md  truth_design.md
eval/: README.md  ask_confidence.md  eval.sh  probes.tsv
internal/ask/: ask.go  ask_test.go  askabeval.go  askeval.go  asklocal.go  asklocal_test.go  confidence.go  confidence_test.go
internal/infer/: infer_mlx_darwin.go  infer_mlx_stub.go  infer_mlx_test.go  infer_onnx.go  infer_onnx_test.go  infer_tokenizer.go  infer_tokenizer_test.go  models_fetch.go  models_fetch_test.go  testhelp.go
internal/infer/models/: README.md  manifest.json
internal/ingest/: canary.go  enrich.go  extract.go  watch.go  watch_test.go
internal/kb/: kbport.go  kbport_test.go  testhelp.go
internal/llm/: extract_local.go  provider.go
internal/search/: embed.go  embed_local.go  embed_local_test.go  entitygraph_test.go  graph.go  graph_test.go  introspect.go  introspect_test.go  mineprobes.go  paraphrase.go  paraphrase_test.go  selfeval.go  selfeval_test.go  temporal.go  temporal_test.go  veccpu.go  veccpu_test.go  vecstore.go  vecstore_test.go
internal/serve/: daemonroute.go  serve.go
internal/store/: backup.go  backup_test.go  db.go  db_readpool_fast.go  db_readpool_portable.go  db_test.go  fixture.go  latency.go  schemas.go  stmthash.go  stmthash_test.go  testhelp.go  util.go  vecmath.go
internal/truth/: canonpreds.go  canonpreds_test.go  judgeaudit.go  judgestats.go  localjudge.go  localjudge_test.go  referee.go  referee_test.go  repair.go  repair_test.go  sweep.go  sweep_test.go
ml/: README.md
ml/datagen/: gen_rewrite.py  gen_screener2.py  gen_traj.py
ml/embedder/: ab_eval.py  embed_corpus.py  embed_questions.py  embedder_train.py  export_embedder_onnx.py  gen_questions.py  round3.sh
ml/extract/: box_05b_parallel.sh  box_extract.sh  cloud_driver.sh  extract_prompt.txt  gen_extract.py  train_extract.py
ml/judge/: export_judge_onnx.py  gen_judge_synth.py  judge_eval.py  judge_train.py  ood_run.sh  sweep_judge.sh
prototype/: pyproject.toml
prototype/pyoracle/: cli.py  db.py  extract.py  graph.py  serve.py  watch.py
scripts/: ask_servers.sh  build_release.sh  demo.tape  export_safetensors.py  make_synthetic_fixture.py  render_graph.py
site/: index.html
skills/oracle/: SKILL.md
testdata/: README.md  canary_expected.json  fixture.db  thresholds.json
testdata/canary_chunks/: 01_deploy_gotcha.jsonl  02_benchmark_run.jsonl  03_preferences_status.jsonl
